# django_home_work_3

./: .env.sample  .gitignore  README.md  data.json  groups.json  pyproject.toml  users.json
catalog_2/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
catalog_2/migrations/: 0001_initial.py  0002_alter_product_number_version.py  0003_alter_product_number_version.py  0004_version_alter_product_options_and_more.py  0005_alter_product_number_version.py  0006_alter_product_options_remove_product_number_version_and_more.py  0007_product_description_alter_product_photo.py  0008_product_user.py  0009_category_product_is_active_alter_version_product_and_more.py  0010_alter_category_options.py  0011_alter_product_options.py  0012_alter_product_created_at.py  0013_rename_user_product_user_product.py
catalog_2/templates/catalog_2/: base.html  category_form.html  category_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog_2/templates/catalog_2/includes/: include_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token_alter_user_country.py
users/templates/: login.html
users/templates/users/: reset_password.html  user_form.html  user_profile.html
